[package]
name = "eosio-shipper"
version = "0.1.1"
authors = ["Ian Holsman <ian@holsman.com.au>"]
edition = "2018"
keywords = ["eosio", "blockchain"]
categories = ["api-bindings"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-tungstenite = { version = "*", features=["tls"]}
log = "0.4"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
tokio = { version = "0.2", default-features = false, features = ["io-std", "macros", "stream", "time"] }
url = "2.0.0"
env_logger = "0.7"
libabieos-sys = { version = "0.3.4"} #, path="../eosio/libabieos-sys" }
error-chain = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64-serde = "0.5.1"
flate2 = { version ="1.0"} #, features = ["zlib"], default-features = false }
futures-channel = "0.3"
chrono="0.4.11"
lazy_static = "1.4"
rust-embed = "5.5.1"
